@@ -644,6 +644,9 @@ class BlockSender implements java.io.Closeable {
         if (!ioem.startsWith("Broken pipe") &&
             !ioem.startsWith("Connection reset")) {
           LOG.error("BlockSender.sendChunks() exception: ", e);
+          //Something might be wrong with the block. Make this block the high 
+          //priority block for verification.
+          datanode.blockScanner.addBlock(block, true);
         }
       }
       throw ioeToSocketException(e);
